[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/DragDrop3D/Draggable.gd" type="Script" id=1]
[ext_resource path="res://3D/physics/Tile.gd" type="Script" id=2]
[ext_resource path="res://3D/physics/Label3D.gd" type="Script" id=3]

[sub_resource type="PhysicsMaterial" id=5]
bounce = 0.1

[sub_resource type="CubeMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.407843, 0.498039, 0.290196, 1 )

[sub_resource type="BoxShape" id=2]

[node name="Tile" type="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0.1, 0 )
physics_material_override = SubResource( 5 )
contacts_reported = 1
contact_monitor = true
axis_lock_linear_z = true
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 3 )
skeleton = NodePath("../CollisionShape")
material/0 = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Draggable" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Label3D" type="Label3D" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.2, 0 )
pixel_size = 0.1
script = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Tile_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Tile_body_exited"]
[connection signal="drag_move" from="Draggable" to="." method="_on_Draggable_drag_move"]
[connection signal="drag_start" from="Draggable" to="." method="_on_Draggable_drag_start"]
[connection signal="drag_stop" from="Draggable" to="." method="_on_Draggable_drag_stop"]
